Select dropdown and Search input placeholder text vertical alignment fix
WC

--- a/src/components/common/LeftSideBar/LeftSideBar.module.css
+++ b/src/components/common/LeftSideBar/LeftSideBar.module.css
@@ -232,9 +232,9 @@
     border-width: 0px;
 }
 
-:global .ant-input-affix-wrapper>input.ant-input {
+/* :global .ant-input-affix-wrapper>input.ant-input {
     line-height: 0;
-}
+} */
 
 .logoContainer input::placeholder {
     color: #8e8585;
